--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,7 @@
         <module>workup/experimental/session3/creditcardtest/mavenproject1</module>
         <module>workup/experimental/session3/creditcardtest/creditcardchecker</module>
         <module>myPracticeCourseWork/session2/exercise1</module>
+        <module>myPracticeCourseWork/assignment/BankApp</module>
+        <module>myPracticeCourseWork/assignment/BankAppClient</module>
     </modules>
 </project>
